--- a/tanni/templates/tanni/base.html
+++ b/tanni/templates/tanni/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <!--ページタイトル-->
         <title>Surasapo</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,11 +10,14 @@
         {% block style %}{% endblock %}
     </head>
     <body>
+        <!--navigation bar-->
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <!--icon-->
             <a class="navbar-brand" href="#"><img src="{% static "tanni/logo1.jpg" %}" alt="(logo)" style="height:60px;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!--links-->
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -37,8 +41,8 @@
         <div class="container mt-4">
             {% block content %}{% endblock %}
         </div>
-        {% block script %}{% endblock %}
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <!--必要なframeworkを入れる-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
